clusterIP-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-clusterip
spec:
  type: ClusterIP
  selector:
    app: my-nginx
  ports:
    - port: 80
      targetPort: 80
