loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: my-nginx
  ports:
    - port: 80
      targetPort: 80
